force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <fullName>Case</fullName>
</CustomObject>