force-app/main/default/objects/Case/fields/Actual_Initial_Response__c.field-meta.xml
<CustomField>
    <fullName>Actual_Initial_Response__c</fullName>
    <label>Actual Initial Response</label>
    <type>DateTime</type>
</CustomField>