force-app/main/default/objects/Case/fields/Actual_Onsite_Response__c.field-meta.xml
<CustomField>
    <fullName>Actual_Onsite_Response__c</fullName>
    <label>Actual Onsite Response</label>
    <type>DateTime</type>
</CustomField>