force-app/main/default/objects/Case/fields/Actual_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Actual_Resolution__c</fullName>
    <label>Actual Resolution</label>
    <type>DateTime</type>
</CustomField>