force-app/main/default/objects/Case/fields/Actual_Restoration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Restoration__c</fullName>
    <label>Actual Restoration</label>
    <type>DateTime</type>
</CustomField>