force-app/main/default/objects/Case/fields/Analyte_component__c.field-meta.xml
<CustomField>
    <fullName>Analyte_component__c</fullName>
    <label>Analyte component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1 Acid Gl</fullName>
            </value>
            <value>
                <fullName>A1 Antitry</fullName>
            </value>
            <value>
                <fullName>A1c</fullName>
            </value>
            <value>
                <fullName>A2 Macrog</fullName>
            </value>
            <value>
                <fullName>AB-PIN</fullName>
            </value>
            <value>
                <fullName>Acetaminop</fullName>
            </value>
            <value>
                <fullName>Acid Phosp</fullName>
            </value>
            <value>
                <fullName>ACTH</fullName>
            </value>
            <value>
                <fullName>Adenovir</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>AlbuminBCG</fullName>
            </value>
            <value>
                <fullName>AlbuminBCP</fullName>
            </value>
            <value>
                <fullName>Aldosteron</fullName>
            </value>
            <value>
                <fullName>ALP</fullName>
            </value>
            <value>
                <fullName>ALT/GPT</fullName>
            </value>
            <value>
                <fullName>AMG</fullName>
            </value>
            <value>
                <fullName>Amikacin</fullName>
            </value>
            <value>
                <fullName>Amitriptyl</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Amobarbit</fullName>
            </value>
            <value>
                <fullName>Amphetam</fullName>
            </value>
            <value>
                <fullName>Amylase</fullName>
            </value>
            <value>
                <fullName>Amyl Pan</fullName>
            </value>
            <value>
                <fullName>Anti-CMV</fullName>
            </value>
            <value>
                <fullName>anti-CoV-2 IgG</fullName>
            </value>
            <value>
                <fullName>Anti-HBc</fullName>
            </value>
            <value>
                <fullName>Anti-HBs</fullName>
            </value>
            <value>
                <fullName>Anti-HCV</fullName>
            </value>
            <value>
                <fullName>AntiHIV1</fullName>
            </value>
            <value>
                <fullName>Anti-HIV-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>