force-app/main/default/objects/Case/fields/Auto_Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Entitlement_Status__c</fullName>
    <label>Auto Entitlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>