force-app/main/default/objects/Case/fields/Billing_Type_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_Reason__c</fullName>
    <label>Billing Type Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On sales demand</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>Alternative billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>