force-app/main/default/objects/Case/fields/Booking_Window__c.field-meta.xml
<CustomField>
    <fullName>Booking_Window__c</fullName>
    <label>Booking Window</label>
    <type>Text</type>
    <length>18</length>
</CustomField>