force-app/main/default/objects/Case/fields/BW_Date__c.field-meta.xml
<CustomField>
    <fullName>BW_Date__c</fullName>
    <label>BW Date</label>
    <type>Date</type>
</CustomField>