force-app/main/default/objects/Case/fields/BW_Selected_By__c.field-meta.xml
<CustomField>
    <fullName>BW_Selected_By__c</fullName>
    <label>BW Selected By</label>
    <type>Text</type>
    <length>18</length>
</CustomField>