force-app/main/default/objects/Case/fields/BW_Territory__c.field-meta.xml
<CustomField>
    <fullName>BW_Territory__c</fullName>
    <label>BW Territory</label>
    <type>Text</type>
    <length>18</length>
</CustomField>