force-app/main/default/objects/Case/fields/BW_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>BW_Time_Zone__c</fullName>
    <label>BW Time Zone</label>
    <type>Text</type>
    <length>255</length>
</CustomField>