force-app/main/default/objects/Case/fields/CAPA_ID__c.field-meta.xml
<CustomField>
    <fullName>CAPA_ID__c</fullName>
    <label>Manufacturer Reference</label>
    <type>Text</type>
    <length>25</length>
</CustomField>