force-app/main/default/objects/Case/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>SVMX Case #</label>
    <type>Text</type>
    <length>30</length>
</CustomField>