force-app/main/default/objects/Case/fields/Case_Comment_Added__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment_Added__c</fullName>
    <label>Case Comment Added</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>