force-app/main/default/objects/Case/fields/Case_Country__c.field-meta.xml
<CustomField>
    <fullName>Case_Country__c</fullName>
    <label>Case Country</label>
    <type>Text</type>
    <length>255</length>
</CustomField>