force-app/main/default/objects/Case/fields/Case_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Count__c</fullName>
    <label>Case Record Count</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>