force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <inlineHelpText>How was the case resolved?</inlineHelpText>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>