force-app/main/default/objects/Case/fields/Case_Time_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>Case_Time_to_Respond__c</fullName>
    <label>Case Time to Respond</label>
    <inlineHelpText>Using LastModifiedDate  &lt; 14 as 🟢 and not used in past 14 day as 🔴 for &apos;normal&apos; cases and
 🟢 🟡 🔴 for &apos;queue owned cases&apos; based on Days open.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>