force-app/main/default/objects/Case/fields/Caselink__c.field-meta.xml
<CustomField>
    <fullName>Caselink__c</fullName>
    <label>Caselink</label>
    <type>Text</type>
    <length>255</length>
</CustomField>