force-app/main/default/objects/Case/fields/Clock_Paused_Forever__c.field-meta.xml
<CustomField>
    <fullName>Clock_Paused_Forever__c</fullName>
    <label>Clock Paused Forever</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>