force-app/main/default/objects/Case/fields/Close_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Reason__c</fullName>
    <label>Close Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application support</fullName>
            </value>
            <value>
                <fullName>Canceled by customer</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Information given to customer</fullName>
            </value>
            <value>
                <fullName>Part(s) sent to customer</fullName>
            </value>
            <value>
                <fullName>Problem solved by FSE</fullName>
            </value>
            <value>
                <fullName>Problem solved by Hotline</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Remote Service</fullName>
            </value>
            <value>
                <fullName>Resolved by Field Agent</fullName>
            </value>
            <value>
                <fullName>Resolved by Investigator</fullName>
            </value>
            <value>
                <fullName>Solved by customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>