force-app/main/default/objects/Case/fields/CMS_Site__c.field-meta.xml
<CustomField>
    <fullName>CMS_Site__c</fullName>
    <label>CMS-Site</label>
    <type>Text</type>
    <length>255</length>
</CustomField>