force-app/main/default/objects/Case/fields/Comp_IP__c.field-meta.xml
<CustomField>
    <fullName>Comp_IP__c</fullName>
    <label>Competitor Installed Product</label>
    <type>Text</type>
    <length>18</length>
</CustomField>