force-app/main/default/objects/Case/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Installed Product</label>
    <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Component Cases</relationshipLabel>
    <relationshipName>Component_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>