force-app/main/default/objects/Case/fields/Component_City__c.field-meta.xml
<CustomField>
    <fullName>Component_City__c</fullName>
    <label>Component SN City</label>
    <inlineHelpText>“City” part of the physical location address of Component SN</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>