force-app/main/default/objects/Case/fields/Component_Country__c.field-meta.xml
<CustomField>
    <fullName>Component_Country__c</fullName>
    <label>Component SN Country</label>
    <inlineHelpText>“Country” part of the physical location address of Component SN</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>