force-app/main/default/objects/Case/fields/Component_serial__c.field-meta.xml
<CustomField>
    <fullName>Component_serial__c</fullName>
    <label>Component_serial</label>
    <type>Text</type>
    <length>255</length>
</CustomField>