force-app/main/default/objects/Case/fields/Component_State__c.field-meta.xml
<CustomField>
    <fullName>Component_State__c</fullName>
    <label>Component SN State</label>
    <inlineHelpText>“State/Province” part of the physical location address of Component SN</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>