force-app/main/default/objects/Case/fields/Component_Street__c.field-meta.xml
<CustomField>
    <fullName>Component_Street__c</fullName>
    <label>Component SN Street</label>
    <inlineHelpText>“Street” part of the physical location address of Component SN</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>