force-app/main/default/objects/Case/fields/Component_Zip__c.field-meta.xml
<CustomField>
    <fullName>Component_Zip__c</fullName>
    <label>Component SN Zip</label>
    <inlineHelpText>“Zip/Postal Code” part of the physical location address of Component SN</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>