force-app/main/default/objects/Case/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <label>Credit Check</label>
    <type>Text</type>
    <length>255</length>
</CustomField>