force-app/main/default/objects/Case/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <label>Days Open</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>