force-app/main/default/objects/Case/fields/Days_to_resolution__c.field-meta.xml
<CustomField>
    <fullName>Days_to_resolution__c</fullName>
    <label>Days to resolution</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>