force-app/main/default/objects/Case/fields/Description_Translated__c.field-meta.xml
<CustomField>
    <fullName>Description_Translated__c</fullName>
    <label>Description (Translated)</label>
    <inlineHelpText>Disclaimer: This text has been translated by AI. Minor differences from the original may be present, but the overall intent and meaning remain unchanged.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>