force-app/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IDD</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
            <value>
                <fullName>MBD</fullName>
            </value>
            <value>
                <fullName>TDX</fullName>
            </value>
            <value>
                <fullName>PDX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>