force-app/main/default/objects/Case/fields/Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Notes__c</fullName>
    <label>Entitlement Notes</label>
    <inlineHelpText>Additional information entered in Case during customer entitlement</inlineHelpText>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>