force-app/main/default/objects/Case/fields/Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Type__c</fullName>
    <label>Entitlement Type</label>
    <inlineHelpText>This is for internal use,  and this is set to &apos;Auto&apos; by Auto-Entitlement or set to &apos;Interactive&apos; in interactive entitlement.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTO</fullName>
            </value>
            <value>
                <fullName>INTERACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>