force-app/main/default/objects/Case/fields/Error_Code_Link__c.field-meta.xml
<CustomField>
    <fullName>Error_Code_Link__c</fullName>
    <label>Linked Error Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>