force-app/main/default/objects/Case/fields/F_14_Day_Count_to_close__c.field-meta.xml
<CustomField>
    <fullName>F_14_Day_Count_to_close__c</fullName>
    <label>14 Day Count to close</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>