force-app/main/default/objects/Case/fields/FSR_template__c.field-meta.xml
<CustomField>
    <fullName>FSR_template__c</fullName>
    <label>FSR template</label>
    <type>Text</type>
    <length>255</length>
</CustomField>