force-app/main/default/objects/Case/fields/Genesys_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Conversation_Id__c</fullName>
    <label>Genesys_Conversation_Id</label>
    <type>Text</type>
    <length>100</length>
</CustomField>