force-app/main/default/objects/Case/fields/Genesys_Email_Queue__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Email_Queue__c</fullName>
    <label>Genesys Email Queue</label>
    <type>Text</type>
    <length>255</length>
</CustomField>