force-app/main/default/objects/Case/fields/InfoCard_ID__c.field-meta.xml
<CustomField>
    <fullName>InfoCard_ID__c</fullName>
    <label>InfoCard ID</label>
    <type>Text</type>
    <length>25</length>
</CustomField>