force-app/main/default/objects/Case/fields/Is_owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_owned_by_Queue__c</fullName>
    <label>Is owned by Queue</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>