force-app/main/default/objects/Case/fields/Is_Service_Covered__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Covered__c</fullName>
    <label>Is Service Covered</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>