force-app/main/default/objects/Case/fields/Is_SLA_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Is_SLA_Calculated__c</fullName>
    <label>Recalculate SLA</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>