force-app/main/default/objects/Case/fields/IsKNcreator__c.field-meta.xml
<CustomField>
    <fullName>IsKNcreator__c</fullName>
    <label>IsKNcreator</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>