force-app/main/default/objects/Case/fields/Latest_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comments__c</fullName>
    <label>Latest Case Comments</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>