force-app/main/default/objects/Case/fields/Log_file_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Log_file_Name_s__c</fullName>
    <label>Log file Name(s)</label>
    <inlineHelpText>Names of the involved log flies</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>