force-app/main/default/objects/Case/fields/Log_File_s_location__c.field-meta.xml
<CustomField>
    <fullName>Log_File_s_location__c</fullName>
    <label>Log File(s) location</label>
    <inlineHelpText>Address or URL for Log files</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>