force-app/main/default/objects/Case/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>