force-app/main/default/objects/Case/fields/Lot_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Lot_Batch_No__c</fullName>
    <label>Lot/Batch No</label>
    <inlineHelpText>Lot or batch number involved in this case</inlineHelpText>
    <type>Text</type>
    <length>25</length>
</CustomField>