force-app/main/default/objects/Case/fields/Manual_Billing_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Billing_Type_Override__c</fullName>
    <label>Manual Billing Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERP Controlled</fullName>
                <default>true</default>
                <label>ERP Controlled</label>
            </value>
            <value>
                <fullName>Not Entitled</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>