force-app/main/default/objects/Case/fields/Master_Control_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Control_Status__c</fullName>
    <label>Master Control Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>