force-app/main/default/objects/Case/fields/MC_Complaint_Team__c.field-meta.xml
<CustomField>
    <fullName>MC_Complaint_Team__c</fullName>
    <label>MC Complaint Team</label>
    <type>TextArea</type>
</CustomField>