force-app/main/default/objects/Case/fields/MC_Site__c.field-meta.xml
<CustomField>
    <fullName>MC_Site__c</fullName>
    <label>MC Site</label>
    <type>Text</type>
    <length>255</length>
</CustomField>