force-app/main/default/objects/Case/fields/MyThread_ID__c.field-meta.xml
<CustomField>
    <fullName>MyThread_ID__c</fullName>
    <label>MyThread_ID</label>
    <type>Text</type>
    <length>120</length>
</CustomField>