force-app/main/default/objects/Case/fields/New_Case_Report__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Report__c</fullName>
    <label>New Case Report</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>