force-app/main/default/objects/Case/fields/Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Notified_Date__c</fullName>
    <label>Notified Date</label>
    <type>DateTime</type>
</CustomField>