force-app/main/default/objects/Case/fields/Onsite_Response_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Response_Internal_By__c</fullName>
    <label>Onsite Response Internal By</label>
    <type>DateTime</type>
</CustomField>