force-app/main/default/objects/Case/fields/Owner_department__c.field-meta.xml
<CustomField>
    <fullName>Owner_department__c</fullName>
    <label>Owner department</label>
    <type>Text</type>
    <length>255</length>
</CustomField>