force-app/main/default/objects/Case/fields/Packet_ID__c.field-meta.xml
<CustomField>
    <fullName>Packet_ID__c</fullName>
    <label>Packet ID</label>
    <type>Text</type>
    <length>25</length>
</CustomField>