force-app/main/default/objects/Case/fields/PCC_Email__c.field-meta.xml
<CustomField>
    <fullName>PCC_Email__c</fullName>
    <label>PCC Email</label>
    <type>Text</type>
    <length>255</length>
</CustomField>