force-app/main/default/objects/Case/fields/Perform_Auto_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Perform_Auto_Entitlement__c</fullName>
    <label>Perform Auto Entitlement</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>