force-app/main/default/objects/Case/fields/PM_Plan__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan__c</fullName>
    <label>Preventive Maintenance Plan</label>
    <type>Text</type>
    <length>18</length>
</CustomField>