force-app/main/default/objects/Case/fields/pMDR_10__c.field-meta.xml
<CustomField>
    <fullName>pMDR_10__c</fullName>
    <label>Assessment performed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>