force-app/main/default/objects/Case/fields/pMDR_1__c.field-meta.xml
<CustomField>
    <fullName>pMDR_1__c</fullName>
    <label>Evidence of repeated failure</label>
    <inlineHelpText>Documented evidence of repeated failure - if checked an email will be send to Quality Officer</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>