force-app/main/default/objects/Case/fields/pMDR_2__c.field-meta.xml
<CustomField>
    <fullName>pMDR_2__c</fullName>
    <label>Smoke/fire/electrical shock issue</label>
    <inlineHelpText>Risk of smoke/fire/electrical shock - if checked an email will be send to Quality Officer</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>