force-app/main/default/objects/Case/fields/Pref_Application_Specialist_from_IP__c.field-meta.xml
<CustomField>
    <fullName>Pref_Application_Specialist_from_IP__c</fullName>
    <label>Pref. Application Specialist from IP</label>
    <type>Text</type>
    <length>255</length>
</CustomField>