force-app/main/default/objects/Case/fields/Pref_Technician_from_Location__c.field-meta.xml
<CustomField>
    <fullName>Pref_Technician_from_Location__c</fullName>
    <label>Pref. Technician from Location</label>
    <type>Text</type>
    <length>255</length>
</CustomField>