force-app/main/default/objects/Case/fields/Preferred_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_End_Time__c</fullName>
    <label>Preferred End Time</label>
    <inlineHelpText>End time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
    <type>DateTime</type>
</CustomField>