force-app/main/default/objects/Case/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <label>Preferred Start Time</label>
    <inlineHelpText>Start time for the case to be scheduled. Calculated automatically based on booking window selection.</inlineHelpText>
    <type>DateTime</type>
</CustomField>