force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <inlineHelpText>Choose or enter the Product name for which the customer is seeking support.</inlineHelpText>
    <type>Text</type>
    <length>18</length>
</CustomField>