force-app/main/default/objects/Case/fields/Product_safety_assessment__c.field-meta.xml
<CustomField>
    <fullName>Product_safety_assessment__c</fullName>
    <label>Product safety assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product endangering safety - Death -100-</fullName>
            </value>
            <value>
                <fullName>Product endangering safety - Severe bodily harm -25-</fullName>
            </value>
            <value>
                <fullName>Product endangering safety - Minor injury -10-</fullName>
            </value>
            <value>
                <fullName>Product endangering safety - Minor discomfort -3-</fullName>
            </value>
            <value>
                <fullName>No safety risk - No impact -1-</fullName>
            </value>
            <value>
                <fullName>Potential loss of sample</fullName>
            </value>
            <value>
                <fullName>Potential incorrect / delayed diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>