force-app/main/default/objects/Case/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <label>Proforma Invoice</label>
    <type>Text</type>
    <length>18</length>
</CustomField>