force-app/main/default/objects/Case/fields/PushToComplaint__c.field-meta.xml
<CustomField>
    <fullName>PushToComplaint__c</fullName>
    <label>PushToComplaint</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>