force-app/main/default/objects/Case/fields/Reagent_component__c.field-meta.xml
<CustomField>
    <fullName>Reagent_component__c</fullName>
    <label>Reagent/component</label>
    <inlineHelpText>The reagent or component affected in pMDR</inlineHelpText>
    <type>Text</type>
    <length>25</length>
</CustomField>