force-app/main/default/objects/Case/fields/Reagent_Product__c.field-meta.xml
<CustomField>
    <fullName>Reagent_Product__c</fullName>
    <label>Reagent/Product</label>
    <type>Text</type>
    <length>18</length>
</CustomField>