force-app/main/default/objects/Case/fields/Record_Time_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Record_Time_Visibility__c</fullName>
    <label>Record Time Visibility</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>