force-app/main/default/objects/Case/fields/Rescue_Field2__c.field-meta.xml
<CustomField>
    <fullName>Rescue_Field2__c</fullName>
    <label>Rescue_Field2</label>
    <type>Text</type>
    <length>255</length>
</CustomField>