force-app/main/default/objects/Case/fields/RescueCustomField4__c.field-meta.xml
<CustomField>
    <fullName>RescueCustomField4__c</fullName>
    <label>RescueCustomField4</label>
    <type>Text</type>
    <length>255</length>
</CustomField>