force-app/main/default/objects/Case/fields/Resolution_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Customer_By__c</fullName>
    <label>Resolution Customer By</label>
    <type>DateTime</type>
</CustomField>