force-app/main/default/objects/Case/fields/Resolution_Internal_By__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Internal_By__c</fullName>
    <label>Resolution Internal By</label>
    <type>DateTime</type>
</CustomField>