force-app/main/default/objects/Case/fields/Restart_SLA_Clock__c.field-meta.xml
<CustomField>
    <fullName>Restart_SLA_Clock__c</fullName>
    <label>Restart SLA Clock</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>