force-app/main/default/objects/Case/fields/Restoration_Customer_By__c.field-meta.xml
<CustomField>
    <fullName>Restoration_Customer_By__c</fullName>
    <label>Restoration Customer By</label>
    <type>DateTime</type>
</CustomField>